--- a/Pure Mathematics.tex
+++ b/Pure Mathematics.tex
@@ -26,7 +26,7 @@
 	\subfile{"Analysis"}
 	
 	\newpage
-	\chapter{Calculus}
+	\chapter{Calculus}\bigskip\bigskip
 	\subfile{"The Number e"}
 	\newpage
 	\subfile{"Differentiation"}
