--- a/Differentiation.tex
+++ b/Differentiation.tex
@@ -184,6 +184,15 @@
 		\[ y(x) = \alpha_0 e^x. \]
 		\TODO{how does this relate to the shift operator describe in a note to \autoref{prop:properties_of_non_bijective_lin_operator}?}
 		
+		\begin{align*}
+		&& e^{\alpha x + c} &= 1 + \frac{\alpha x + c}{1!} + \frac{(\alpha x + c)^2}{2!} + \frac{(\alpha x + c)^3}{3!} + \cdots \\[8pt]
+		&\iff & \frac{\dif}{\dif x} e^{\alpha x + c} &= \alpha + \alpha\frac{\alpha x + c}{1!} + \alpha\frac{(\alpha x + c)^2}{2!} + \alpha\frac{(\alpha x + c)^3}{3!} + \cdots &\sidecomment{} \\[8pt]
+		&&&= \alpha e^{\alpha x + c}.
+		\end{align*}
+		
+		So, the general form of the eigenvectors of the differentiation operator is
+		\[ e^{\alpha x + c} te^{\alpha x} \]
+		
 		\bigskip\bigskip\bigskip
 		The exponential function $e^x$ is an eigenvector of the differentiation operator (also known as an \textit{eigenfunction} since the operator maps between function spaces). So the differential equation,
 		\begin{equation}
@@ -194,5 +203,49 @@
 			A\vtheta = \alpha \vtheta
 		\end{equation}
 		has general solution $Ce^{\alpha x}$ for constant $C$.
+	}
+
+
+
+% ------------
+
+
+	\pagebreak	
+	\searchableSection{Differentiation of Homogeneous Functions}{analysis, differentiation, homogeneous functions}{
+	\bigskip\bigskip
+
+		\boxeddefinition{A \textbf{homogeneous} function is a multivariate function $f(x_1, \dots, x_n)$ such that,
+			\[ f(\lambda x_1, \dots, \lambda x_n) = \lambda^d f(x_1,\dots, x_n) \hspace{20pt} d \in \Z{},\, \lambda \in \R{}. \]
+			The integer power $d$ is known as the \textbf{degree} so that $f$ is described as \textbf{homogeneous of degree $d$}.
+		}
+		
+		\bigskip
+		\labeledProposition{\textbf{Euler's Theorem of Homogeneous Functions}: If $f(x_1, \dots, x_n)$ is a homogeneous function of degree $d$ then,
+			\[ d \cdot f(x_1, \dots, x_n) = x_1 \frac{\partial f}{\partial x_1} + \cdots + x_n \frac{\partial f}{\partial x_n}. \]
+		}{eulers-theorem-of-homogeneous-functions}
+		\begin{proof}
+			Assume $f$ can be expressed as a multivariate polynomial. Then $f(x_1, \dots, x_n)$ can be expressed as the sum of terms of the form,
+			\[ x_1^{i_1} \cdots x_n^{i_n}. \]
+			Therefore, for each term of $f(\lambda x_1, \dots, \lambda x_n)$ we have,
+			\[ (\lambda x_1)^{i_1} \cdots (\lambda x_n)^{i_n} = \lambda^{i_1} x_1^{i_1} \cdots \lambda^{i_n} x_n^{i_n} = \lambda^{(i_1 + \cdots + i_n)} x_1^{i_1} \cdots x_n^{i_n}. \]
+			Since $f$ is homogeneous of degree $d$ we also have,
+			\[ f(\lambda x_1, \dots, \lambda x_n) = \lambda^d f(x_1,\dots, x_n) \]
+			where each term of $\lambda^d f(x_1,\dots, x_n)$ has the form,
+			\[ \lambda^d x_1^{i_1} \cdots x_n^{i_n} \]
+			which means that, for every term of the expression for $f(\lambda x_1, \dots, \lambda x_n)$, we must have,
+			\[ \lambda^{(i_1 + \cdots + i_n)} = \lambda^d \iff i_1 + \cdots + i_n = d. \]
+			So, if we take the partial derivative of $f$ with respect to $x_1$, each term of the result will take the form,
+			\[ i_1x_1^{(i_1 - 1)}x_2^{i_2}\cdots x_n^{i_n} \]
+			and each term of the partial derivative with respect to $x_2$ will have the form,
+			\[ i_2x_1^{i_1}x_2^{(i_2 - 1)}\cdots x_n^{i_n} \]
+			and the $n$-th partial derivative will have terms,
+			\[ i_nx_1^{i_1}x_2^{i_2}\cdots x_n^{(i_n - 1)}. \]
+			Now if we look at the terms of the expression $x_1f_{x_1}$,
+			\[ x \cdot i_1x_1^{(i_1 - 1)}x_2^{i_2}\cdots x_n^{i_n} = i_1x_1^{i_1}x_2^{i_2}\cdots x_n^{i_n} \]
+			we see that the terms are the same as the terms of the partial derivative with respect to $x_1$ except multiplied by the power of $x_1$ in that term. Therefore, each term of the expression ${ x_1f_{x_1} + \cdots + x_nf_{x_n} }$ has the form,
+			\[ (i_1 + i_2 + \cdots + i_n)x_1^{i_1}x_2^{i_2}\cdots x_n^{i_n} = d \cdot x_1^{i_1}x_2^{i_2}\cdots x_n^{i_n}. \]
+			Therefore,
+			\[ x_1f_{x_1} + \cdots + x_nf_{x_n} = d \cdot f(x_1, \dots, x_n). \qedhere \]
+		\end{proof}
 	}
 \end{document}
